--- a/app/html/popup.html
+++ b/app/html/popup.html
@@ -1,25 +1,30 @@
 <!DOCTYPE html>
 <html ng-app="app">
 <head>
-	<meta charset="utf-8">
-	<script src="../libs/jquery/jquery.js"></script>
-	<script src="../libs/angular/angular.js"></script>
-	<script src="../libs/bootstrap/bootstrap.js"></script>
-	<link href="../libs/bootstrap/bootstrap.css" rel="stylesheet">
-	<!-- build:js ../js/app.min.js -->
-	<script src="../js/app.js"></script>
-	<script src="../js/controllers.js"></script>
-	<script src="../js/directives.js"></script>
-	<script src="../js/filters.js"></script>
-	<script src="../js/services.js"></script>
-	<!-- endbuild -->
-	<!-- build:css ../css/app.min.css -->
-	<link href="../css/app.css" rel="stylesheet">
-	<!-- endbuild -->
+  <meta charset="utf-8">
+  <script src="../libs/jquery/js/jquery.js"></script>
+  <script src="../libs/angular/js/angular.js"></script>
+  <script src="../libs/bootstrap/js/bootstrap.js"></script>
+  <link href="../libs/bootstrap/css/bootstrap.css" rel="stylesheet">
+  <!-- build:js ../js/app.min.js -->
+  <script src="../js/app.js"></script>
+  <script src="../js/controllers.js"></script>
+  <script src="../js/directives.js"></script>
+  <script src="../js/filters.js"></script>
+  <script src="../js/services.js"></script>
+  <!-- endbuild -->
+  <!-- build:css ../css/app.min.css -->
+  <link href="../css/app.css" rel="stylesheet">
+  <!-- endbuild -->
 </head>
-<body id="popup" ng-controller="PopupMainCtrl" when-scrolled="load(true);">
-    <ul>
-        <li ng-repeat="url in urls" ng-click="select(url);"><img ng-src="{{ url }}">
-    </ul>
+<body id="popup" ng-controller="PopupMainCtrl">
+<div id="loader" ng-show="isLoading">
+  <div class="text-center">
+    <span class="glyphicon glyphicon-refresh glyphicon-refresh-animate"></span>
+  </div>
+</div>
+<ul when-scrolled="load(true);" ng-hide="isLoading">
+  <li ng-repeat="url in urls" ng-click="select(url);"><img ng-src="{{ url }}">
+</ul>
 </body>
 </html>
