--- a/app/html/popup.html
+++ b/app/html/popup.html
@@ -2,10 +2,11 @@
 <html ng-app="app">
 <head>
   <meta charset="utf-8">
-  <script src="../libs/jquery/js/jquery.js"></script>
-  <script src="../libs/angular/js/angular.js"></script>
-  <script src="../libs/bootstrap/js/bootstrap.js"></script>
-  <link href="../libs/bootstrap/css/bootstrap.css" rel="stylesheet">
+  <script src="../libs/jquery/js/jquery.min.js"></script>
+  <script src="../libs/angular/js/angular.min.js"></script>
+  <script src="../libs/angular-animate/js/angular-animate.min.js"></script>
+  <script src="../libs/bootstrap/js/bootstrap.min.js"></script>
+  <link href="../libs/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <!-- build:js ../js/app.min.js -->
   <script src="../js/app.js"></script>
   <script src="../js/controllers.js"></script>
@@ -18,13 +19,16 @@
   <!-- endbuild -->
 </head>
 <body id="popup" ng-controller="PopupMainCtrl">
-<div id="loader" ng-show="isLoading">
+<div id="loader" ng-show="isFirstLoading">
   <div class="text-center">
     <span class="glyphicon glyphicon-refresh glyphicon-refresh-animate"></span>
   </div>
 </div>
-<ul when-scrolled="load(true);" ng-hide="isLoading">
-  <li ng-repeat="url in urls" ng-click="select(url);"><img ng-src="{{ url }}">
+<ul when-scrolled="load(true);" ng-hide="isFirstLoading">
+  <li ng-repeat="url in urls" ng-click="select(url);">
+    <img ng-src="{{ url }}">
+  <li id="more" ng-show="canMoreLoad">
+    <span class="glyphicon glyphicon-refresh glyphicon-refresh-animate"></span>
 </ul>
 </body>
 </html>
