--- a/app/html/popup.html
+++ b/app/html/popup.html
@@ -2,11 +2,11 @@
 <html ng-app="app">
 <head>
   <meta charset="utf-8">
-  <script src="../libs/jquery/js/jquery.min.js"></script>
-  <script src="../libs/angular/js/angular.min.js"></script>
-  <script src="../libs/angular-animate/js/angular-animate.min.js"></script>
-  <script src="../libs/bootstrap/js/bootstrap.min.js"></script>
-  <link href="../libs/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <script src="../libs/jquery/dist/jquery.min.js"></script>
+  <script src="../libs/angular/angular.min.js"></script>
+  <script src="../libs/angular-animate/angular-animate.min.js"></script>
+  <script src="../libs/bootstrap/dist/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="../libs/bootstrap/dist/css/bootstrap.min.css">
   <!-- build:js ../js/app.min.js -->
   <script src="../js/app.js"></script>
   <script src="../js/controllers.js"></script>
@@ -15,7 +15,7 @@
   <script src="../js/services.js"></script>
   <!-- endbuild -->
   <!-- build:css ../css/app.min.css -->
-  <link href="../css/app.css" rel="stylesheet">
+  <link rel="stylesheet" href="../css/app.css">
   <!-- endbuild -->
 </head>
 <body id="popup" ng-controller="PopupMainCtrl">
